# cdt-viz

./: .gitignore  README.md  pyproject.toml
figures/: f1_score_comparison_enzyme_split.html
notebooks/: 01_zou_et_al_2023_gpt4_drop.ipynb  02_gemini_et_al_vs_gpt4.ipynb  03_holmes_et_al_covid19.ipynb  04_kim_et_al_2023_enzymes.ipynb  competition_data_load.ipynb
