[project]
name = "cdt-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "bokeh>=3.8.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "nbstripout>=0.8.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
